--- a/templates/dashboard_user/prestations/details.html
+++ b/templates/dashboard_user/prestations/details.html
@@ -15,7 +15,7 @@
             </div>
             <div class="">
                 <div class="mb-3" align="right">
-                    <a href="" class="btn btn-primary float-right"><i class="bi bi-printer dispo">&nbsp;</i>Imprimer</a>
+                    <a href="{% url 'print_p_facture' prestation.pk%}" class="btn btn-primary float-right"><i class="bi bi-download dispo">&nbsp;</i>Télécharger</a>
                 </div>
                 <div class="row gy-4">
                     <div class="col-lg-6 col-md-6" >
