Add optional taxe

--- a/templates/dashboard_user/ventes/facture.html
+++ b/templates/dashboard_user/ventes/facture.html
@@ -284,7 +284,7 @@
                             <td>{{vte.remise|floatformat:-2}} FCFA</td>
                         </tr>
                         <tr>
-                            <td><b>TVA 18%</b>:</td>
+                            <td><b>TVA {{vte.taux_taxe}}%</b>:</td>
                             <td>{{vte.taxe|floatformat:-2}} FCFA</td>
                         </tr>
                         <tfoot>
