Add new mailtrap config

--- a/templates/administrateurs/new.html
+++ b/templates/administrateurs/new.html
@@ -57,7 +57,7 @@
                             {% endfor %}
                         </div>
                         <div class="col-md-12 text-center">
-                            <button type="submit" class="w-100">Ajoutez le gestionnaire</button>
+                            <button type="submit" class="w-100">Terminer l'inscription</button>
                         </div>
                         <div>
                             <p class="text-muted description text-center" style="font-size: 13px;">Le gestionnaire est le reponsable de l'organisation ou du titre équivalent</p>
