--- a/templates/inclusions/footer.html
+++ b/templates/inclusions/footer.html
@@ -8,16 +8,16 @@
               <img src="{% static 'assets/img/logo.png' %}" alt="">
               <span>Ramea</span>
             </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-            <div class="social-links mt-3">
+           
+            <!--<div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="#" class="instagram"><i class="bi bi-instagram bx bxl-instagram"></i></a>
               <a href="#" class="linkedin"><i class="bi bi-linkedin bx bxl-linkedin"></i></a>
-            </div>
+            </div>-->
           </div>
 
-          <div class="col-lg-2 col-6 footer-links">
+          <!--<div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
@@ -49,7 +49,7 @@
               <strong>Email:</strong> info@example.com<br>
             </p>
 
-          </div>
+          </div>-->
 
         </div>
       </div>
