Rajout de D'analytics

--- a/templates/dashboard_user/base.html
+++ b/templates/dashboard_user/base.html
@@ -13,19 +13,17 @@
     <link href="{% static 'assets/css/style2.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static 'assets/css/jquery.mCustomScrollbar.min.css' %}" type="text/css">
     <link href="{% static 'assets/img/logo.png' %}" rel="icon" type="text/css">
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-KN262RXN');</script>
-      <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q9Q0CFPZWX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-Q9Q0CFPZWX');
+    </script>
   </head>
   <body>
-      <!-- Google Tag Manager (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KN262RXN"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-        <!-- End Google Tag Manager (noscript) -->
         {% block body %}
               
         {% endblock body %}
